working with whole new project for learing MVC and moving to validation on frontend forms

--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-UMTV61V;Database=BulkyWeb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
