--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-UMTV61V;Database=BulkyWeb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-UMTV61V;Database=BulkyWeb;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnectionLap": "Server=LAPTOP-1CPAGFS5;Database=BulkyWeb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
