--- a/Bulky/Bulky.Models/Bulky.Models.csproj
+++ b/Bulky/Bulky.Models/Bulky.Models.csproj
@@ -6,5 +6,8 @@
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
   </PropertyGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
 </Project>
